# void-and-thunder

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  pyproject.toml  run.bat
.github/workflows/: ci.yml  pages.yml
crates/vt_client/: Cargo.toml
crates/vt_client/src/: audio.rs  main.rs
crates/vt_sim/: Cargo.toml
crates/vt_sim/src/: ai.rs  combat.rs  components.rs  events.rs  lib.rs  piracy.rs  plugin.rs  ship.rs  spawn.rs  world.rs
design/setting/: SOURCE.md
design/setting/settled_dark/: world.md  world.spec.yaml
design/setting/settled_dark/chronology/: eras.md
design/setting/settled_dark/entities/: odyssey_era.md  settlement_era.md
docs/: mvp-plan.md
docs/research/: ship-combat-references.md
pasm/spec/: README.md
pasm/spec/core/: decisions.yaml  foundation.yaml
